fix shift on mobile when start new pomodoro task

--- a/src/styles/components/_headings.scss
+++ b/src/styles/components/_headings.scss
@@ -4,6 +4,11 @@
   min-height: calc($height-md * 2);
   line-height: calc($height-md * 2);
   color: var(--text-color, #222);
+
+  @include respond(mobile) {
+    min-height: calc($height-md * 3);
+    line-height: calc($height-md * 3);
+  }
 }
 
 .heading-secondary {
